[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cleanup.gd" type="Script" id=1]
[ext_resource path="res://tom/health_bar_progress.png" type="Texture" id=2]
[ext_resource path="res://cleanup/cleanup.png" type="Texture" id=3]

[sub_resource type="Animation" id=9]
resource_name = "Cleanup"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cleanup:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="Cleanup" type="Node"]
script = ExtResource( 1 )

[node name="Cleanup" type="Sprite" parent="."]
rotation = -0.731356
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 16, -8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Cleanup"
anims/Cleanup = SubResource( 9 )

[node name="CleanupTimer" type="Timer" parent="."]
one_shot = true

[node name="ProgressLocation" type="Node2D" parent="."]

[node name="CleanupProgress" type="TextureProgress" parent="ProgressLocation"]
visible = false
margin_left = -8.0
margin_top = -12.9081
margin_right = 8.0
margin_bottom = -9.90809
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 1, 1, 1, 0.427451 )
tint_over = Color( 0, 0.505882, 1, 0 )
tint_progress = Color( 0, 0.717647, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="CleanupTimer" to="." method="_on_CleanupTimer_timeout"]
